<resources>
    <string name="app_name">Taxi Service For Driver</string>
    <string name="menu">Меню</string>
    <string name="logo">LOGO</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="signIn">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="confirmPass">Повторите пароль</string>
    <string name="toRegister">Зарегистрироваться</string>
    <string name="brandCar">Марка машины</string>
    <string name="colorCar">Цвет машины</string>
    <string name="numberCar">Номер машины</string>
    <string name="accountNumber">Номер cчета Yandex.Money</string>
    <string name="notAccountNumber">
        <![CDATA[<a href="https://money.yandex.ru/reg?_openstat=imainnew3;reg;main">Нет cчета Yandex.Money?</a>]]></string>
    <string name="whence">Откуда:</string>
    <string name="where">Куда:</string>
    <string name="approximateCost">Цена поездки:</string>
    <string name="activOrders">Доступные заказы</string>
    <string name="profile">Профиль</string>
    <string name="assessments">Оценки клиентов</string>
    <string name="supportService">Служба поддержки</string>
    <string name="aboutProgram">О программе</string>
    <string name="contentMesseg">Опишите возникшую проблему</string>
    <string name="yourEmail">Ваш E-mail</string>
    <string name="btnSendInquiry">Сообщить о проблеме</string>
    <string name="assessment5">5 звезд:</string>
    <string name="assessment4">4 звезды:</string>
    <string name="assessment3">3 звезды:</string>
    <string name="assessment2">2 звезды:</string>
    <string name="assessment1">1 звезда:</string>
    <string name="detailWhence">Откуда</string>
    <string name="detailWhere">Куда</string>
    <string name="approximateTravelTime">Приблизительное время поездки</string>
    <string name="approximateDistance">Приблизительное расстояние</string>
    <string name="timeWaiting">Приблизительное время поездки до клиента</string>
    <string name="detailOrder">Подробности заказа</string>
    <string name="fullNameClient">Имя клиента</string>
    <string name="startOrder">Начать выполнение</string>
    <string name="commentClient">Комментарий клиента</string>
    <string name="paymentMethod">Способ оплаты</string>
    <string name="factTimeWaiting">Клиент ожидал</string>
    <string name="annulment">Отменить заказ</string>
    <string name="calling">Позвонить</string>
    <string name="headerTotalOrder">Итоги по заказу</string>
    <string name="openListOrders">Перейти к списку заказов</string>
    <string name="factCostOrder">Фактическая цена заказа</string>
    <string name="factTravelTime">Время выполнения заказа</string>
    <string name="factDistance">Фактическое расстояние</string>
    <string name="dateTimeStartOrder">Дата и время начала заказа</string>
    <string name="patronymic">Отчество</string>
    <string name="enterYourFirstName">Введите ваше имя</string>
    <string name="enterYourLastName">Введите вашу фамилию</string>
    <string name="enterYourPatronymic">Введите ваше отчество</string>
    <string name="enterYourPhone">+7(999)888&#8211;7777</string>
    <string name="enterYourNewPass">Введите ваш новый пароль</string>
    <string name="enterYourNewConfirmPass">Повторите ваш новый пароль</string>
    <string name="enterYourBrandCar">Введите марку и модель машины</string>
    <string name="enterYourColorCar">Введите цвет машины</string>
    <string name="enterYourNumberCar">Введите номер машины</string>
    <string name="enterYourAccountNumber">Введите номер счета Yandex.Money</string>
    <string name="save">Сохранить</string>
    <string name="program">Программа</string>
    <string name="programInfo">Taxi Service For Driver</string>
    <string name="descriptionProgram">Описание</string>
    <string name="descriptionProgramInfo">Программа предназначена для некоммерческого использования.
        Основная задача программы заключается в удобном поиске и выполнении заказов по городу. Удобная система
        просмотра заказов, получение выручки без посредников и независимость от конкретного таксопарка
        делают этот сервис максимально удобным и комфортным для таксистов.
    </string>
    <string name="organization">Организация</string>
    <string name="organizationInfo">Липецкйи государственный технический университет</string>
    <string name="author">Автор</string>
    <string name="authorInfo">Ковальчук А. Д., &#169;2017</string>
    <string name="version">Версия</string>
    <string name="yandexMaps">Яндекс.Карты</string>
    <string name="yandexMapsInfo">Выражается отдельная благодарность сервису Яндекс.Карты за предоставление доступа
        к библиотеке «Yandex Map Kit».
    </string>
    <string name="termsOfUseYandexMaps">Условия использования сервиса Яндекс.Карты</string>
</resources>