<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:layout_weight="1"
              android:background="@color/colorDefault"
>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical"
        >
            <TextView
                    android:text="@string/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderName"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profileName"
                    android:hint="@string/enterYourFirstName"
                    android:text="Антон"/>
            <TextView
                    android:text="@string/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderFamily"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profileFamily"
                    android:hint="@string/enterYourLastName"
                    android:text="Ковальчук"/>
            <TextView
                    android:text="@string/patronymic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderPatronymic"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profilePatronymic"
                    android:hint="@string/enterYourPatronymic"
                    android:text="Дмитриевич"/>
            <TextView
                    android:text="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderPhone"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/profilePhone"
                    android:hint="@string/enterYourPhone"
                    android:text="+7(999)888&#8211;7777"
            />
            <TextView
                    android:text="@string/brandCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderBrand"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/profileBrand"
                    android:hint="@string/enterYourBrandCar"
                    android:text="Renault Logan"/>
            <TextView
                    android:text="@string/colorCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderColor"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/profileColor"
                    android:hint="@string/enterYourColorCar"
                    android:text="Белый"/>
            <TextView
                    android:text="@string/numberCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderNumber1"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/profileNumber1"
                    android:hint="@string/enterYourNumberCar"
                    android:text="М304АК/24"/>
            <TextView
                    android:text="@string/accountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderAccountNumber"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/profileAccountNumber"
                    android:hint="@string/enterYourAccountNumber"
                    android:text="43000324354366346341"/>
            <TextView
                    android:text="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderPass1"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profilePass1"
                    android:hint="@string/enterYourNewPass"
            />
            <TextView
                    android:text="@string/confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileHeaderPass2"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profilePass2"
                    android:hint="@string/enterYourNewConfirmPass"
            />
        </LinearLayout>
    </ScrollView>

    <Button
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="saveDataProfile"
    />
</LinearLayout>