<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDefault"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="16dp"
    >
        <TextView
                android:text="@string/program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textStyle="bold"
        />
        <TextView
                android:text="@string/programInfo"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView11"
        />
        <TextView
                android:text="@string/descriptionProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView5"
                android:textStyle="bold"
        />
        <TextView
                android:text="@string/descriptionProgramInfo"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView12"
        />
        <TextView
                android:text="@string/organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView6"
                android:textStyle="bold"
        />
        <TextView
                android:text="@string/organizationInfo"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView13"
        />
        <TextView
                android:text="@string/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView7"
                android:textStyle="bold"
        />
        <TextView
                android:text="@string/authorInfo"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView14"
        />
        <TextView
                android:text="@string/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView8"
                android:textStyle="bold"
        />
        <TextView
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView15"
        />
        <TextView
                android:text="@string/yandexMaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView9"
                android:textStyle="bold"
        />
        <TextView
                android:text="@string/yandexMapsInfo"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView16"
        />
        <TextView
                android:text="@string/termsOfUseYandexMaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView10"
                android:textStyle="bold"
        />
        <TextView
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/textView17"
        />
    </LinearLayout>
</ScrollView>